--- a/cms/cmsapp/templates/cmsapp/login.html
+++ b/cms/cmsapp/templates/cmsapp/login.html
@@ -2,13 +2,17 @@
 {% block content %}
 
 <style>
+    .section{
+     margin-top:20px;
+     margin-bottom:60px;
+    }
     #container{
-        width:50%;
+        width:400px;
+        height:350px;
         box-shadow:0 3px 8px 0 rgba(0,0,0,0.2);
-        height:auto;
         padding: 30px 20px 20px 20px;
         border-radius: 30px;
-        margin-bottom: 20px;
+        margin:auto;
 
     }
     #container h3{text-align:center;}
